FCS-400: Add files to case notes tab (#144)